syntax = "proto3";

package Rtng;

option go_package = "./internal/pkg/rating/delivery/grpc/";

message Data {
  uint64 movieId = 1;
  uint64 userId = 2;
  int32 rating = 3;
}

message NewRating { double Rating = 1; }

service Poster { rpc PostRating(Data) returns (NewRating); }
